# aero_simulation_ws

install/: local_setup.sh  setup.sh
install/aero_simulation/share/aero_simulation/: package.bash  package.zsh
log/: latest_build
src/aero_simulation/: CMakeLists.txt  camera_node.py  package.xml  rover_control_node.py  setup.py
src/aero_simulation/config/: camera_params.yaml  joint_state_params.yaml  joystick_params.yaml  robot_state_params.yaml  rover_control_params.yaml
src/aero_simulation/launch/: gazebo_launch.py
src/aero_simulation/scripts/: joint_state_publisher.py  joystick_control_node.py  robot_state_publisher.py  rover_control_node.py
src/aero_simulation/urdf/: rover_base.urdf.xacro
